docs/1.17/Cluster.md
# Cluster

* [misc operations](#misc)

## misc

  ### apis.autoscaling.v2beta1.get

  get available resources

  ### apis.autoscaling.v2beta2.get

  get available resources

  ### apis.autoscaling.v1.get

  get available resources

  ### apis.autoscaling.get

  get information of a group

  ### apis.settings.k8s.io.v1alpha1.get

  get available resources

  ### apis.settings.k8s.io.get

  get information of a group

  ### apis.rbac.authorization.k8s.io.v1beta1.get

  get available resources

  ### apis.rbac.authorization.k8s.io.v1alpha1.get

  get available resources

  ### apis.rbac.authorization.k8s.io.v1.get

  get available resources

  ### apis.rbac.authorization.k8s.io.get

  get information of a group

  ### apis.policy.v1beta1.get

  get available resources

  ### apis.policy.get

  get information of a group

  ### apis.networking.k8s.io.v1beta1.get

  get available resources

  ### apis.networking.k8s.io.v1.get

  get available resources

  ### apis.networking.k8s.io.get

  get information of a group

  ### apis.extensions.v1beta1.get

  get available resources

  ### apis.extensions.get

  get information of a group

  ### apis.events.k8s.io.v1beta1.get

  get available resources

  ### apis.events.k8s.io.get

  get information of a group

  ### apis.discovery.k8s.io.v1beta1.get

  get available resources

  ### apis.discovery.k8s.io.get

  get information of a group

  ### apis.coordination.k8s.io.v1beta1.get

  get available resources

  ### apis.coordination.k8s.io.v1.get

  get available resources

  ### apis.coordination.k8s.io.get

  get information of a group

  ### apis.batch.v2alpha1.get

  get available resources

  ### apis.batch.v1beta1.get

  get available resources

  ### apis.batch.v1.get

  get available resources

  ### apis.batch.get

  get information of a group

  ### apis.apps.v1beta2.get

  get available resources

  ### apis.apps.v1beta1.get

  get available resources

  ### apis.apps.v1.get

  get available resources

  ### apis.apps.get

  get information of a group

  ### apis.storage.k8s.io.v1beta1.get

  get available resources

  ### apis.storage.k8s.io.v1alpha1.get

  get available resources

  ### apis.storage.k8s.io.v1.get

  get available resources

  ### apis.storage.k8s.io.get

  get information of a group

  ### apis.admissionregistration.k8s.io.v1.get

  get available resources

  ### apis.admissionregistration.k8s.io.v1beta1.get

  get available resources

  ### apis.admissionregistration.k8s.io.get

  get information of a group

  ### apis.apiextensions.k8s.io.v1.get

  get available resources

  ### apis.apiextensions.k8s.io.v1beta1.get

  get available resources

  ### apis.apiextensions.k8s.io.get

  get information of a group

  ### apis.apiregistration.k8s.io.v1.get

  get available resources

  ### apis.apiregistration.k8s.io.v1beta1.get

  get available resources

  ### apis.apiregistration.k8s.io.get

  get information of a group

  ### apis.node.k8s.io.v1beta1.get

  get available resources

  ### apis.node.k8s.io.v1alpha1.get

  get available resources

  ### apis.node.k8s.io.get

  get information of a group

  ### apis.certificates.k8s.io.v1beta1.get

  get available resources

  ### apis.certificates.k8s.io.get

  get information of a group

  ### apis.auditregistration.k8s.io.v1alpha1.get

  get available resources

  ### apis.auditregistration.k8s.io.get

  get information of a group

  ### apis.authorization.k8s.io.v1.get

  get available resources

  ### apis.authorization.k8s.io.v1beta1.get

  get available resources

  ### apis.authorization.k8s.io.get

  get information of a group

  ### apis.scheduling.k8s.io.v1beta1.get

  get available resources

  ### apis.scheduling.k8s.io.v1alpha1.get

  get available resources

  ### apis.scheduling.k8s.io.v1.get

  get available resources

  ### apis.scheduling.k8s.io.get

  get information of a group

  ### apis.flowcontrol.apiserver.k8s.io.v1alpha1.get

  get available resources

  ### apis.flowcontrol.apiserver.k8s.io.get

  get information of a group

  ### apis.authentication.k8s.io.v1beta1.get

  get available resources

  ### apis.authentication.k8s.io.v1.get

  get available resources

  ### apis.authentication.k8s.io.get

  get information of a group

  ### apis.get

  get available API versions

  ### api.v1.get

  get available resources

  ### api.get

  get available API versions

  ### logs.get

  

  ### version.get

  get the code version

